--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -80,6 +80,6 @@
   "branches_to_filter": [
     "live"
   ],
-  "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/IntuneDocs",
+  "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/IntuneDocs.hu-hu",
   "skip_source_output_uploading": false
 }
