--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -81,5 +81,12 @@
     "live"
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/IntuneDocs.hu-hu",
-  "skip_source_output_uploading": false
+  "skip_source_output_uploading": false,
+  "dependent_repositories": [
+    {
+      "path_to_root": "_themes",
+      "url": "https://github.com/Microsoft/templates.docs.msft.hu-hu",
+      "branch": "master"
+    }
+  ]
 }
