--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -78,7 +78,7 @@
     ""
   ],
   "branches_to_filter": [
-    "live"
+    "master-oldev"
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/IntuneDocs.hu-hu",
   "skip_source_output_uploading": false,
