--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -5,8 +5,8 @@
   "docsets_to_publish": [
     {
       "docset_name": "intune-azure",
-      "build_source_folder": "intune-azure",
-      "build_output_subfolder": "intune-azure",
+      "build_source_folder": "intune",
+      "build_output_subfolder": "intune",
       "locale": "hu-hu",
       "monikers": [],
       "open_to_public_contributors": false,
@@ -19,8 +19,8 @@
     },
     {
       "docset_name": "InTuneDocs",
-      "build_source_folder": "InTuneDocs",
-      "build_output_subfolder": "InTuneDocs",
+      "build_source_folder": "intune-classic",
+      "build_output_subfolder": "intune-classic",
       "locale": "hu-hu",
       "monikers": [],
       "open_to_public_contributors": true,
@@ -45,13 +45,29 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes"
+    },
+    {
+      "docset_name": "intune-azure-redir",
+      "build_source_folder": "intune-azure",
+      "build_output_subfolder": "intune-azure-redir",
+      "locale": "hu-hu",
+      "monikers": [],
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [
     ""
   ],
   "branches_to_filter": [
-    "master-oldev", "live"
+    "master-oldev",
+    "live"
   ],
   "git_repository_url_open_to_public_contributors": "https://github.com/Microsoft/IntuneDocs.hu-hu",
   "git_repository_branch_open_to_public_contributors": "live",
