--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -316,6 +316,8 @@
               href: vpn-settings-android.md
             - name: iOS
               href: vpn-settings-ios.md
+            - name: Alkalmazásonkénti VPN konfigurálása iOS-eszközökhöz
+              href: vpn-setting-configure-per-app.md
             - name: macOS
               href: vpn-settings-macos.md
             - name: Windows 8.1
