Commit translated content

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -610,6 +610,8 @@
               href: reports-ref-date.md
             - name: Eszközök típusú entitások referenciája
               href: reports-ref-devices.md
+            - name: Az Intune felügyeleti bővítmény referenciája
+              href: reports-ref-intunemanagementextension.md
             - name: Mobilalkalmazás-felügyelet (MAM) típusú entitások referenciája
               href: reports-ref-mobile-app-management.md
             - name: Szabályzat típusú entitások referenciája
