Commit translated content

--- a/intune/index.yml
+++ b/intune/index.yml
@@ -9,7 +9,7 @@ metadata:
   author: arob98
   ms.author: angrobe
   manager: angrobe
-  ms.date: 10/07/2017
+  ms.date: 10/31/2017
   ms.topic: article
   ms.devlang: na
   ms.service: microsoft-intune
@@ -64,16 +64,16 @@ sections:
             title: Az Intune magas szintű architektúrájának megtekintése
             image:
               src: 'https://docs.microsoft.com/media/common/i_architecture.svg'
-          - href: reports-nav-create-intune-reports.md
-            title: Jelentések létrehozása az Intune Data Warehouse (előzetes verzió) szolgáltatással
+          - href: enrollment-autopilot.md
+            title: A Windows AutoPilot üzembe helyezési program támogatása a Microsoft Intune-ban
             image:
               src: 'https://docs.microsoft.com/media/common/i_generic-database.svg'
-          - href: 'https://blogs.technet.microsoft.com/intunesupport/2017/08/22/pfx-certificates-issued-using-the-intune-certificate-connector-fix-your-intune-migration-configuration-issues/'
-            title: '[Blog] Az Intune Certificate Connector használatával kibocsátott PFX-tanúsítványok'
+          - href: 'https://blogs.technet.microsoft.com/intunesupport/2017/10/11/upcoming-security-enhancements-in-the-intune-service-your-action-is-required/'
+            title: '[Blog] Biztonsági fejlesztések az Intune szolgáltatásban '
             image:
               src: 'https://docs.microsoft.com/media/common/i_blog.svg'
-          - href: 'https://blogs.technet.microsoft.com/intunesupport/2017/09/19/support-tip-setting-up-communication-between-mam-managed-and-mdm-managed-apps/'
-            title: '[Blog] MAM által kezelt és MDM által kezelt alkalmazások közti kommunikáció beállítása'
+          - href: 'https://cloudblogs.microsoft.com/enterprisemobility/2017/10/26/intunes-new-troubleshooting-portal-makes-diagnosing-and-resolving-end-user-issues-easier/'
+            title: '[Blog] A hibaelhárítási portál megkönnyíti a végfelhasználói hibák diagnosztizálását és megoldását'
             image:
               src: 'https://docs.microsoft.com/media/common/i_blog.svg'
   - title: Videók
