--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -1,4 +1,4 @@
-- name: Bevezetés
+- name: Áttekintés
   href: introduction-intune.md
   expanded: true
   items:
@@ -22,24 +22,13 @@
           href: whats-new-archive.md
         - name: Újdonságok – Archívum (klasszikus portál)
           href: whats-new-archive-classic.md
-    - name: Magas szintű architektúra
-      href: high-level-architecture.md
-    - name: Eszközök és alkalmazások életciklusa
-      href: introduction-device-app-lifecycles.md
-      items:
-        - name: Eszközök életciklusa
-          href: device-lifecycle.md
-        - name: Alkalmazások életciklusa
-          href: app-lifecycle.md
-    - name: Gyakori helyzetek
-      href: common-scenarios.md
     - name: A szolgáltatás leírása
       href: microsoft-intune-service-description.md
     - name: Ismert problémák
       href: known-issues.md
     - name: Támogatás kérése
       href: get-support.md
-- name: Ismerkedés az Intune-nal
+- name: Gyorsútmutatók
   href: get-started-evaluation.md
   items:
     - name: Navigálás az Azure Portalon
@@ -54,6 +43,31 @@
       href: get-started-enroll.md
     - name: Alkalmazások hozzárendelése
       href: get-started-apps.md
+- name: Forgatókönyvek végrehajtási útmutatói
+  items:
+    - name: Az Exchange Online védelme
+      href: exchange-online-protect.md
+    - name: Az ügyfélszolgálati költségek csökkentése
+      href: password-reset.md
+    - name: Illetéktelen hozzáférés megakadályozása
+      href: data-outside-protect.md
+    - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
+      href: data-leak-prevention.md
+    - name: Az MDM és az MAM összehasonlítása
+      href: byod-technology-decisions.md
+- name: Fogalmak
+  items:
+    - name: Magas szintű architektúra
+      href: high-level-architecture.md
+    - name: Eszközök és alkalmazások életciklusa
+      href: introduction-device-app-lifecycles.md
+      items:
+        - name: Eszközök életciklusa
+          href: device-lifecycle.md
+        - name: Alkalmazások életciklusa
+          href: app-lifecycle.md
+    - name: Gyakori helyzetek
+      href: common-scenarios.md
 - name: Telepítési terv kidolgozása
   items:
     - name: Planning guide (Tervezési útmutató)
@@ -79,18 +93,6 @@
           href: planning-guide-test-validation.md
         - name: További háttéranyagok
           href: planning-guide-resources.md
-    - name: Forgatókönyvek végrehajtási útmutatói
-      items:
-        - name: Az Exchange Online védelme
-          href: exchange-online-protect.md
-        - name: Az ügyfélszolgálati költségek csökkentése
-          href: password-reset.md
-        - name: Illetéktelen hozzáférés megakadályozása
-          href: data-outside-protect.md
-        - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
-          href: data-leak-prevention.md
-        - name: Az MDM és az MAM összehasonlítása
-          href: byod-technology-decisions.md
     - name: Migrálási útmutató
       href: migration-guide.md
       items:
@@ -114,7 +116,7 @@
               href: migration-guide-drive-adoption.md
             - name: A szokásos migrációs ciklus
               href: migration-guide-cycle.md
-- name: Cél
+- name: Használati útmutatók
   items:
     - name: Az Intune beállítása
       href: setup-steps.md
@@ -214,35 +216,39 @@
         - name: Alkalmazások hozzáadása
           href: apps-add.md
           items:
-            - name: Androidos áruházbeli alkalmazások
-              href: store-apps-android.md
-            - name: Androidos üzletági alkalmazások
-              href: lob-apps-android.md
-            - name: iOS-es áruházbeli alkalmazások
-              href: store-apps-ios.md
-            - name: iOS-es üzletági alkalmazások
-              href: lob-apps-ios.md
+            - name: Áruházbeli alkalmazások
+              items:
+                - name: Androidos áruházbeli alkalmazások
+                  href: store-apps-android.md
+                - name: iOS-es áruházbeli alkalmazások
+                  href: store-apps-ios.md
+                - name: Windows Phone 8.1-es áruházbeli alkalmazások
+                  href: store-apps-windows-phone-8-1.md
+                - name: Microsoft Áruházbeli alkalmazások
+                  href: store-apps-windows.md
+                - name: Android for Work-alkalmazások
+                  href: apps-add-android-for-work.md
+                - name: Windows 10-es Office 365-alkalmazások
+                  href: apps-add-office365.md
+                - name: macOS-es Office 365-alkalmazások
+                  href: apps-add-office365-macos.md
+            - name: Alkalmazás létrehozása (üzletági)
+              items:
+                - name: Androidos üzletági alkalmazások
+                  href: lob-apps-android.md
+                - name: iOS-es üzletági alkalmazások
+                  href: lob-apps-ios.md
+                - name: Windows Phone LOB-alkalmazások
+                  href: lob-apps-windows-phone.md
+                - name: Windows LOB apps
+                  href: lob-apps-windows.md
             - name: Webalkalmazások
               href: web-app.md
-            - name: Windows Phone 8.1-es áruházbeli alkalmazások
-              href: store-apps-windows-phone-8-1.md
-            - name: Windows Phone LOB-alkalmazások
-              href: lob-apps-windows-phone.md
-            - name: Microsoft Áruházbeli alkalmazások
-              href: store-apps-windows.md
-            - name: Windows LOB apps
-              href: lob-apps-windows.md
-            - name: Android for Work-alkalmazások
-              href: apps-add-android-for-work.md
-            - name: Windows 10-es Office 365-alkalmazások
-              href: apps-add-office365.md
-            - name: macOS-es Office 365-alkalmazások
-              href: apps-add-office365-macos.md
-        - name: Alkalmazások hozzárendelése
+        - name: Alkalmazások telepítése
           href: apps-deploy.md
         - name: Alkalmazások figyelése
           href: apps-monitor.md
-        - name: Alkalmazáskonfigurációs szabályzatok
+        - name: Alkalmazások konfigurálása
           href: app-configuration-policies-overview.md
           items:
             - name: iOS felügyelt eszközök
@@ -251,23 +257,25 @@
               href: app-configuration-policies-use-android.md
             - name: Felügyelt alkalmazások
               href: app-configuration-policies-managed-app.md
-        - name: iOS-alkalmazáskiépítési profilok használata
-          href: app-provisioning-profile-ios.md
-        - name: Alkalmazások szelektív törlése
-          href: apps-selective-wipe.md
-        - name: Mennyiségi programban vásárolt alkalmazások és könyvek használata
-          href: vpp-apps.md
+            - name: iOS-alkalmazáskiépítési profilok használata
+              href: app-provisioning-profile-ios.md
+            - name: Mennyiségi programban vásárolt alkalmazások és könyvek használata
+              href: vpp-apps.md
+              items:
+                - name: iOS VPP-alkalmazások
+                  href: vpp-apps-ios.md
+                - name: Vállalati Microsoft Áruházbeli alkalmazások
+                  href: windows-store-for-business.md
+                - name: iOS-es e-könyvek
+                  href: vpp-ebooks-ios.md
+            - name: A Céges portál alkalmazás konfigurálása
+              href: company-portal-app.md
+            - name: A Managed Browser konfigurálása
+              href: app-configuration-managed-browser.md
+        - name: Alkalmazások védelme
           items:
-            - name: iOS VPP-alkalmazások
-              href: vpp-apps-ios.md
-            - name: Vállalati Microsoft Áruházbeli alkalmazások
-              href: windows-store-for-business.md
-            - name: iOS-es e-könyvek
-              href: vpp-ebooks-ios.md
-        - name: A Céges portál alkalmazás konfigurálása
-          href: company-portal-app.md
-        - name: A Managed Browser konfigurálása
-          href: app-configuration-managed-browser.md
+            - name: Alkalmazások szelektív törlése
+              href: apps-selective-wipe.md
     - name: Eszközök konfigurálása
       href: device-profiles.md
       items:
@@ -435,8 +443,6 @@
                   href: app-protection-policy-settings-android.md
                 - name: iOS-beállítások
                   href: app-protection-policy-settings-ios.md
-                - name: Alkalmazásvédelmi naplók áttekintése a Managed Browserben
-                  href: app-protection-policy-settings-log.md
             - name: Az alkalmazásvédelmi szabályzatok ellenőrzése
               href: app-protection-policies-validate.md
             - name: Alkalmazásvédelmi felhasználó állapotának figyelése
@@ -554,45 +560,42 @@
           href: end-user-apps-ios.md
         - name: Windows-alkalmazások beszerzése
           href: end-user-apps-windows.md
-- name: Monitorozás és hibaelhárítás
-  items:
-    - name: Segítség a felhasználóknak a problémák elhárításában
-      href: help-desk-operators.md
-    - name: Auditnaplók Intune-tevékenységekhez
-      href: monitor-audit-logs.md
-    - name: Az Intune-adattárház használata
-      href: reports-nav-create-intune-reports.md
+    - name: Monitorozás és hibaelhárítás
       items:
-        - name: Módosítási napló Adatraktár
-          href: reports-changelog.md
-        - name: Kapcsolódás az adattárházhoz a Power BI használatával
-          href: reports-proc-get-a-link-powerbi.md
-        - name: Jelentés készítése az OData-adatcsatornából a Power BI használatával
-          href: reports-proc-create-with-odata.md
-- name: Automatizálás és testreszabás
-  items:
-    - name: Egyéni eszközbeállítások konfigurálása
-      href: custom-settings-configure.md
+        - name: Segítség a felhasználóknak a problémák elhárításában
+          href: help-desk-operators.md
+        - name: Auditnaplók Intune-tevékenységekhez
+          href: monitor-audit-logs.md
+        - name: Alkalmazásvédelmi naplók áttekintése
+          href: app-protection-policy-settings-log.md
+    - name: Automatizálás és testreszabás
       items:
-        - name: Wi-Fi-profil előmegosztott kulccsal
-          href: wi-fi-profile-shared-key.md
-        - name: Android
-          href: custom-settings-android.md
+        - name: Egyéni eszközbeállítások konfigurálása
+          href: custom-settings-configure.md
           items:
-            - name: Alkalmazásonkénti VPN-profil
-              href: android-pulse-secure-per-app-vpn.md
-            - name: Alkalmazások engedélyezése/letiltása a Samsung Knox Standard használatával
-              href: samsung-knox-apps-allow-block.md
-        - name: iOS
-          href: custom-settings-ios.md
-        - name: macOS
-          href: custom-settings-macos.md
-        - name: Windows Phone 8.1
-          href: custom-settings-windows-phone-8-1.md
-        - name: Windows 10
-          href: custom-settings-windows-10.md
-        - name: Android for Work
-          href: custom-settings-android-for-work.md
+            - name: Wi-Fi-profil előmegosztott kulccsal
+              href: wi-fi-profile-shared-key.md
+            - name: Android
+              href: custom-settings-android.md
+              items:
+                - name: Alkalmazásonkénti VPN-profil
+                  href: android-pulse-secure-per-app-vpn.md
+                - name: Alkalmazások engedélyezése/letiltása a Samsung Knox Standard használatával
+                  href: samsung-knox-apps-allow-block.md
+            - name: iOS
+              href: custom-settings-ios.md
+            - name: macOS
+              href: custom-settings-macos.md
+            - name: Windows Phone 8.1
+              href: custom-settings-windows-phone-8-1.md
+            - name: Windows 10
+              href: custom-settings-windows-10.md
+            - name: Android for Work
+              href: custom-settings-android-for-work.md
+        - name: Windowsos üzletági alkalmazások közvetlen telepítése
+          href: app-sideload-windows.md
+- name: Fejlesztői útmutatás
+  items:
     - name: Alkalmazások védelme az Intune App SDK-val
       href: app-sdk.md
       items:
@@ -612,6 +615,15 @@
           href: app-sdk-cordova.md
         - name: Intune App SDK Xamarin összetevő
           href: app-sdk-xamarin.md
+    - name: Az Intune-adattárház használata
+      href: reports-nav-create-intune-reports.md
+      items:
+        - name: Módosítási napló Adatraktár
+          href: reports-changelog.md
+        - name: Kapcsolódás az adattárházhoz a Power BI használatával
+          href: reports-proc-get-a-link-powerbi.md
+        - name: Jelentés készítése az OData-adatcsatornából a Power BI használatával
+          href: reports-proc-create-with-odata.md
     - name: Jelentéskészítés az Intune-adattárház API-val
       href: reports-nav-intune-data-warehouse.md
       items:
@@ -647,5 +659,7 @@
       items:
         - name: Referenciainformációk az Intune Graph API-khoz
           href: 'https://graph.microsoft.io/docs/api-reference/beta/resources/intune_graph_overview'
-- name: Szószedet
-  href: intune-glossary.md
+- name: Erőforrások
+  items:
+    - name: Szószedet
+      href: intune-glossary.md
