--- a/intune/index.yml
+++ b/intune/index.yml
@@ -13,11 +13,11 @@ metadata:
   ms.topic: article
   ms.devlang: na
   ms.service: microsoft-intune
-  ms.openlocfilehash: 6e471cf531afd88c5c199ba4b39e771c77ead032
-  ms.sourcegitcommit: 4401890db054657954a8b3947de1f4308f4da170
+  ms.openlocfilehash: 843723000c59cfab30ac4d1b4e641f22b1e0d0c0
+  ms.sourcegitcommit: 53d272defd2ec061dfdfdae3668d1b676c8aa7c6
   ms.translationtype: HT
   ms.contentlocale: hu-HU
-  ms.lasthandoff: 01/11/2018
+  ms.lasthandoff: 01/23/2018
 sections:
 - items:
   - type: markdown
@@ -84,9 +84,9 @@ sections:
 - title: "Videók"
   items:
   - type: markdown
-    text: <iframe width="560" height="315" src="https://www.youtube.com/embed/FpkCI6xmsE4" frameborder="0" allowfullscreen></iframe>
+    text: '>[!VIDEO https://www.youtube.com/embed/FpkCI6xmsE4]'
   - type: markdown
-    text: <iframe width="560" height="315" src="https://www.youtube.com/embed/Cn29dmgDcIw?list=PLXtHYVsvn_b-0X3R9QCJ4T-Y27DK376NR" frameborder="0" allowfullscreen></iframe>
+    text: '>[!VIDEO https://www.youtube.com/embed/Cn29dmgDcIw]'
 - title: "Tervezési cikkek"
   items:
   - type: list
@@ -133,7 +133,7 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: "<a href=\"https://fasttrack.microsoft.com/ems\">Több mint 150 licence van? Éljen a FastTrack előnyeivel!</a>"
+    - html: "<a href=\"https://docs.microsoft.com/enterprise-mobility-security/solutions/enterprise-mobility-fasttrack-program\">Több mint 150 licence van? Éljen a FastTrack előnyeivel!</a>"
     - html: "<a href=\"https://blogs.technet.microsoft.com/enterprisemobility/\">Az Enterprise Mobility + Security blog megnyitása</a>"
     - html: "<a href=\"https://blogs.technet.microsoft.com/intunesupport/\">Segítség kérése az Intune támogatási blogján</a>"
     - html: "<a href=\"https://microsoftintune.uservoice.com/forums/291681-ideas\">Visszajelzés küldése az Intune-ról a UserVoice szolgáltatásban</a>"
