--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -126,10 +126,6 @@
           items:
             - name: Hálózati konfiguráció
               href: network-bandwidth-use.md
-            - name: Windows Holographic for Business
-              href: windows-holographic-for-business.md
-            - name: A Windows Holographic frissítése
-              href: holographic-upgrade.md
         - name: Bejelentkezés az Intune-ba
           href: account-sign-up.md
         - name: Tartományok beállítása
@@ -206,6 +202,8 @@
           href: device-logout-user.md
         - name: Felhasználó eltávolítása
           href: device-remove-user.md
+        - name: Eszköz törlése
+          href: device-erase.md
         - name: Távolról vezérelt mobileszközök
           href: device-profile-android-teamviewer.md
         - name: Windows 10-es PIN-kód alaphelyzetbe állítása
@@ -250,8 +248,13 @@
                   href: lob-apps-windows.md
             - name: Webalkalmazások
               href: web-app.md
+            - name: Beépített alkalmazások
+              href: apps-add-bulit-in.md
         - name: Alkalmazások telepítése
           href: apps-deploy.md
+          items:
+            - name: Alkalmazások belefoglalása vagy kizárása
+              href: apps-inc-exl-assignments.md
         - name: Alkalmazások figyelése
           href: apps-monitor.md
         - name: Alkalmazások konfigurálása
@@ -553,6 +556,11 @@
         - name: Szabályzatütközések feloldása
           href: /intune-classic/deploy-use/resolve-gpo-and-microsoft-intune-policy-conflicts
           maintainContext: true
+    - name: A Windows Holographic kezelése
+      href: windows-holographic-for-business.md
+      items:
+        - name: A Windows Holographic frissítése
+          href: holographic-upgrade.md
     - name: Felhasználók oktatása
       href: end-user-educate.md
       items:
